[package]
name = "print-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
print-common = { path = "../print-common" }
network-types = "0.0.4"
[dependencies.xxhash-rust]
version = "0.8.7"
features = ["xxh32", "const_xxh32"]

[[bin]]
name = "print"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = true
debuginfo=2
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

# [target.bpfel-unknown-none]
# rustflags = ["-C debuginfo=2"]

[workspace]
members = []
